Fix image border size on mobile

--- a/_less/gallery.less
+++ b/_less/gallery.less
@@ -95,7 +95,7 @@
 
     .gallery-image-item {
       margin: auto;
-      margin-top: 1em;
+      margin-top: 0.25rem;
     }
 
     .gallery-image-item:first-of-type {
